# fire_calculator

./: .gitignore  CLAUDE.md  IDEAS.md  README.md  ROADMAP.md  pyproject.toml
src/fire_calculator/: __init__.py  __main__.py
src/fire_calculator/calculators/: compound_interest_calculator.py
src/fire_calculator/cli/: compound_interest_cli.py  visualizer.py
src/fire_calculator/models/: compound_interest.py
src/firefly/: __init__.py
src/firefly/api/: __init__.py  main.py  models.py
src/firefly/api/routes/: calculator.py
src/firefly/cli/: __init__.py  __main__.py  compound_interest_cli.py  visualizer.py
src/firefly/core/: __init__.py
src/firefly/core/calculators/: __init__.py  compound_interest.py
src/firefly/core/models/: __init__.py
src/firefly/tui/: __init__.py  __main__.py  app.py
src/firefly/tui/screens/: __init__.py  calculator.py  comparison.py  scenarios.py  settings.py
src/firefly/tui/utils/: __init__.py  graphing.py
src/firefly/tui/widgets/: __init__.py  graph_panel.py  input_panel.py  stats_bar.py
