[project]
name = "fire-calculator"
version = "0.1.0"
description = "FIRE (Financial Independence, Retire Early) calculator with compound interest and visualizations"
readme = "README.md"
authors = [
    { name = "anirudhlakkaraju", email = "lakanirudh123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "plotext>=5.3.2",
    "questionary>=2.1.1",
    "rich>=14.2.0",
]

[project.scripts]
fire-calc = "fire_calculator.cli.compound_interest_cli:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"
executionEnvironments = [
    { root = "src" }
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
